--- a/articles/9b156eb262b961.md
+++ b/articles/9b156eb262b961.md
@@ -7,10 +7,121 @@ published: false
 ---
 
 # 経緯
-google.maps.Markerが 2024年2月にサポートが終了したこともあり、現在利用しているライブラリの対応を待とうとしましたが、更新の可能性は低そうでした（issueはたてられていましたが、更新のモチベーションはなさそうでした）。
-そうとなれば、別のライブラリに移行を考えていた中で[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を見つけました。このライブラリは、2024/05/11にリリースされたばかりで比較的新しいライブラリなので試してみようと思いました。
+`google.maps.Marker`が 2024年2月にサポートが終了したこともあり、現在利用しているライブラリの対応を待とうとしましたが、更新の可能性は低そうでした（issueはたてられていましたが、更新のモチベーションはなさそうでした）。
+そうとなれば、別のライブラリに移行を考えていた中で[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を見つけました。このライブラリは2024/05/11にリリースされたばかりで、比較的新しいライブラリなので試してみようと思いました。[ドキュメント](https://visgl.github.io/react-google-maps/)もしっかり用意されており簡単に実装することができると思います。
 
+# 実際に使ってみる
+## Google Map API
+Google Map APIを利用することで、Google Mapの機能をウェブサイトやアプリに埋め込むことができます。利用するために、APIキーが必要ですがキーの取得方法などは他にわかりやすい記事がたくさんあるのでここでは書きません。
 
+## @vis.gl/react-google-mapsを試してみる
+まずは、`yarn add @vis.gl/react-google-maps`でライブラリをインストールしましょう。
+マップを表示するのは非常に簡単です。Mapコンポーネントにはデフォルトで`width: 100%`と`height: 100%`が設定されているので、親要素のサイズに合うようになっています。また、styleを直接渡すこともできます。
 
+```tsx
+import { APIProvider, Map } from "@vis.gl/react-google-maps";
+import styles from "./GoogleMap.module.css";
 
+const API_KEY = import.meta.env.VITE_GOOGLE_MAP_API_KEY;
 
+const GoogleMap = () => {
+	const center = { lat: 0, lng: 0 };
+	const zoom = 3;
+
+	return (
+		<div className={styles.wrapper}>
+			<APIProvider apiKey={API_KEY}>
+				<Map defaultCenter={center} defaultZoom={zoom} />
+			</APIProvider>
+		</div>
+	);
+};
+
+export default GoogleMap;
+```
+
+![](/images/9b156eb262b961/195046.png)
+
+## マーカーを表示してみる
+マーカーを表示するコンポーネントは`Marker`と`AdvancedMarker`の2種類あります。
+`google.maps.Marker`が利用できなくなるので、今回は`AdvancedMarker`を利用した実装を試してみます。`AdvancedMarker`を利用するにあたってマップIDが必要になりそうです。このマップIDはAPIキーと同様に作成しておきましょう。一応[公式サイト](https://developers.google.com/maps/documentation/javascript/advanced-markers/migration?hl=ja)には`DEMO_MAP_ID`を使用しても構わないと書いているのでマップIDを作成しなくても利用できるかもしれません。
+また、`AdvancedMarker`を利用することでピンのカスタマイズが容易にできるようになりますが今回はデフォルトの見慣れた赤いバルーンで試します。
+
+```tsx
+import { APIProvider, AdvancedMarker, Map } from "@vis.gl/react-google-maps";
+import styles from "./GoogleMap.module.css";
+
+const API_KEY = import.meta.env.VITE_GOOGLE_MAP_API_KEY;
+const MAP_ID = import.meta.env.VITE_GOOGLE_MAP_ID;
+
+const GoogleMap = () => {
+	const center = { lat: 0, lng: 0 };
+	const zoom = 3;
+
+	return (
+		<div className={styles.wrapper}>
+			<APIProvider apiKey={API_KEY}>
+				<Map defaultCenter={center} defaultZoom={zoom} mapId={MAP_ID} />
+				<AdvancedMarker position={center} />
+			</APIProvider>
+		</div>
+	);
+};
+
+export default GoogleMap;
+```
+![](/images/9b156eb262b961/195855.png)
+
+## 情報ウィンドウ
+最後にマーカをクリックするとウィンドウが表示されるようにします。これも非常に簡単に実装することができます。
+
+```tsx
+import {
+	AdvancedMarker,
+	InfoWindow,
+	useAdvancedMarkerRef,
+} from "@vis.gl/react-google-maps";
+import { useCallback, useState } from "react";
+
+type MarkerWithInfoWindowProps = {
+	position: google.maps.LatLng | google.maps.LatLngLiteral | null | undefined;
+};
+
+const MarkerWithInfoWindow = ({ position }: MarkerWithInfoWindowProps) => {
+	const [markerRef, marker] = useAdvancedMarkerRef();
+	const [infoWindowShown, setInfoWindowShown] = useState(false);
+
+	const handleMarkerClick = useCallback(
+		() => setInfoWindowShown((isShown) => !isShown),
+		[],
+	);
+
+	const handleClose = useCallback(() => setInfoWindowShown(false), []);
+
+	return (
+		<>
+			<AdvancedMarker
+				ref={markerRef}
+				position={position}
+				onClick={handleMarkerClick}
+			/>
+
+			{infoWindowShown && (
+				<InfoWindow anchor={marker} onClose={handleClose}>
+					<h2>これが情報ウィンドウ</h2>
+					<a href="/">リンク</a>
+				</InfoWindow>
+			)}
+		</>
+	);
+};
+
+export default MarkerWithInfoWindow;
+```
+
+![](/images/9b156eb262b961/201442.png)
+
+# まとめ
+今回は、`google.maps.Marker`が利用できなくなるとのことで`google.maps.marker.AdvancedMarkerElement`を利用しているライブラリを探していたところ見つけた[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を触ってみました。
+まだ正式バージョンがリリースして数ヵ月しかたっていないので未発見のバグが出てくる可能性がありますが、コンポーネントを配置するだけで大体の機能が使えるので非常に便利でした。
+今後もこちらのライブラリの動向を追っていこうと思います。
