--- a/articles/9b156eb262b961.md
+++ b/articles/9b156eb262b961.md
@@ -82,6 +82,7 @@ import {
 	useAdvancedMarkerRef,
 } from "@vis.gl/react-google-maps";
 import { useCallback, useState } from "react";
+import styles from "./MarkerWithInfoWindow.module.css";
 
 type MarkerWithInfoWindowProps = {
 	position: google.maps.LatLng | google.maps.LatLngLiteral | null | undefined;
@@ -99,7 +100,7 @@ const MarkerWithInfoWindow = ({ position }: MarkerWithInfoWindowProps) => {
 	const handleClose = useCallback(() => setInfoWindowShown(false), []);
 
 	return (
-		<>
+		<div className={styles.wrapper}>
 			<AdvancedMarker
 				ref={markerRef}
 				position={position}
@@ -112,7 +113,7 @@ const MarkerWithInfoWindow = ({ position }: MarkerWithInfoWindowProps) => {
 					<a href="/">リンク</a>
 				</InfoWindow>
 			)}
-		</>
+		</div>
 	);
 };
 
