--- a/articles/9b156eb262b961.md
+++ b/articles/9b156eb262b961.md
@@ -7,16 +7,22 @@ published: false
 ---
 
 # 経緯
-`google.maps.Marker`が 2024年2月にサポートが終了したこともあり、現在利用しているライブラリの対応を待とうとしましたが、更新の可能性は低そうでした（issueはたてられていましたが、更新のモチベーションはなさそうでした）。
-そうとなれば、別のライブラリに移行を考えていた中で[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を見つけました。このライブラリは2024/05/11にリリースされたばかりで、比較的新しいライブラリなので試してみようと思いました。[ドキュメント](https://visgl.github.io/react-google-maps/)もしっかり用意されており簡単に実装することができると思います。
+`google.maps.Marker`が 2024年2月にサポートが終了したこともあり、現在利用しているライブラリの対応を待とうとしましたが、更新の可能性は低そうでした。（issueはたてられていましたが、更新のモチベーションはなさそうでした）そんなことから、別のライブラリに移行を考えていた中で[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を見つけました。このライブラリは2024/05/11にリリースされたばかりで、比較的新しいライブラリなので試してみようと思いました。[ドキュメント](https://visgl.github.io/react-google-maps/)もしっかり用意されており簡単に実装することができると思います。
 
 # 実際に使ってみる
+実際に[visgl/react-google-maps](https://github.com/visgl/react-google-maps)を利用してVite + React + TypeScriptのプロジェクトで実装してみようと思います。
+
 ## Google Map API
 Google Map APIを利用することで、Google Mapの機能をウェブサイトやアプリに埋め込むことができます。利用するために、APIキーが必要ですがキーの取得方法などは他にわかりやすい記事がたくさんあるのでここでは書きません。
 
 ## @vis.gl/react-google-mapsを試してみる
-まずは、`yarn add @vis.gl/react-google-maps`でライブラリをインストールしましょう。
-マップを表示するのは非常に簡単です。Mapコンポーネントにはデフォルトで`width: 100%`と`height: 100%`が設定されているので、親要素のサイズに合うようになっています。また、styleを直接渡すこともできます。
+まずは、
+```shell
+yarn add @vis.gl/react-google-maps
+```
+でライブラリをインストールしましょう。
+
+マップを表示するのは非常に簡単で、用意されているMapコンポーネントを配置するだけです。Mapコンポーネントにはデフォルトで`width: 100%`と`height: 100%`が設定されているので、親要素のサイズに合うようになっています。また、styleを直接渡すこともできます。
 
 ```tsx
 import { APIProvider, Map } from "@vis.gl/react-google-maps";
